--- a/App.xaml
+++ b/App.xaml
@@ -6,7 +6,11 @@
     <Application.Resources>
         <Style TargetType="TextBox">
             <Setter Property="Width" Value="200"></Setter>
-            <Setter Property="Padding" Value="10"></Setter>
+            <Setter Property="Padding" Value="8"></Setter>
+            <Setter Property="Height" Value="35"></Setter>
+        </Style>
+        <Style TargetType="ComboBox">
+            <Setter Property="Width" Value="200"></Setter>
             <Setter Property="Height" Value="35"></Setter>
         </Style>
         <Style TargetType="TextBlock">
