--- a/Pages/BookListPage.xaml
+++ b/Pages/BookListPage.xaml
@@ -16,22 +16,56 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBlock>Поиск</TextBlock>
-            <TextBox x:Name="SearchTb"></TextBox>
+            <TextBox x:Name="SearchTb" TextChanged="SearchTb_TextChanged"></TextBox>
+            <TextBlock>По жанру</TextBlock>
+            <ComboBox x:Name="GenrehCb" SelectionChanged="GenrehCb_SelectionChanged" ></ComboBox>
         </StackPanel>
-        <DataGrid Margin="5" Grid.Row="1" x:Name="BookList" AutoGenerateColumns="False" CanUserAddRows="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="№" Binding="{Binding Id}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Наименование" Binding="{Binding Name}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Автор" Binding="{Binding Author.FullName}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Жанр" Binding="{Binding Genre.Name}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Год издания" Binding="{Binding Year}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Кол-во экземпляров" Binding="{Binding CountCopies}"></DataGridTextColumn>
-            </DataGrid.Columns>
-        </DataGrid>
+        <ListView  Margin="5" Grid.Row="1" x:Name="BookList" d:ItemsSource="{d:SampleData ItemCount=5}" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Border BorderBrush="LightGray" BorderThickness="2" Margin="5" >
+                        <Grid Width="320" Height="200">
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition  Width="2*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Row="0" Grid.Column="0" Text="Название:"></TextBlock>
+                            <TextBlock Grid.Row="1" Grid.Column="0" Text="Автор:"></TextBlock>
+                            <TextBlock Grid.Row="2" Grid.Column="0" Text="Жанр:"></TextBlock>
+                            <TextBlock Grid.Row="3" Grid.Column="0" Text="Издательство:"></TextBlock>
+                            <TextBlock Grid.Row="4" Grid.Column="0" Text="Год:"></TextBlock>
+                            <TextBlock Grid.Row="5" Grid.Column="0" Text="Кол-во копий"></TextBlock>
+
+                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Name}"></TextBlock>
+                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Author.FullName}"></TextBlock>
+                            <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Genre.Name}"></TextBlock>
+                            <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding PublihingHouse}"></TextBlock>
+                            <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Year}"></TextBlock>
+                            <TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding CountCopies}"></TextBlock>
+                    </Grid> 
+                    </Border>
+                  
+                </DataTemplate>
+                
+            </ListView.ItemTemplate>
+        </ListView>
         <StackPanel Grid.Row="2" Orientation="Horizontal">
-            <Button x:Name="AddBtn">Добавить</Button>
-            <Button x:Name="EditBtn">Изменить</Button>
-            <Button x:Name="DeleteBtn">Удалить</Button>
+            <Button x:Name="AddBtn" Click="AddBtn_Click">Добавить</Button>
+            <Button x:Name="EditBtn" Click="EditBtn_Click">Изменить</Button>
+            <Button x:Name="DeleteBtn" Click="DeleteBtn_Click">Удалить</Button>
         </StackPanel>
     </Grid>
 </Page>
