--- a/Pages/IssuanceAndReturnBookPage.xaml
+++ b/Pages/IssuanceAndReturnBookPage.xaml
@@ -18,15 +18,50 @@
             <TextBlock>Поиск</TextBlock>
             <TextBox x:Name="SearchTb"></TextBox>
         </StackPanel>
-        <DataGrid Margin="5" Grid.Row="1" x:Name="IssuanceAndReturnBookList" CanUserAddRows="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="№"></DataGridTextColumn>
-                <DataGridTextColumn Header="Наименование книги"></DataGridTextColumn>
-                <DataGridTextColumn Header="Читатель"></DataGridTextColumn>
-                <DataGridTextColumn Header="Дата выдачи"></DataGridTextColumn>
-                <DataGridTextColumn Header="Дата возврата"></DataGridTextColumn>
-            </DataGrid.Columns>
-        </DataGrid>
+
+        <ListView x:Name="IssuanceAndReturnBookList" Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+           
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Border BorderBrush="LightGray" BorderThickness="2" Margin="5">
+                        <Grid Width="330">
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition  Width="2*"/>
+
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Row="0" Grid.Column="0">Книга:</TextBlock>
+                            <TextBlock Grid.Row="1" Grid.Column="0">Читатель:</TextBlock>
+                            <TextBlock Grid.Row="2" Grid.Column="0">Читательский №:</TextBlock>
+                            <TextBlock Grid.Row="3" Grid.Column="0">Дата выдачи:</TextBlock>
+                            <TextBlock Grid.Row="4" Grid.Column="0">Дата возврата:</TextBlock>
+
+                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Book.Name}" ></TextBlock>
+                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Reader.FullName}"></TextBlock>
+                            <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Reader.NumberLibraryCard}"></TextBlock>
+                            <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding DateOfIssue, StringFormat=dd.MM.yyy}"></TextBlock>
+                            <TextBlock Grid.Row="4" Grid.Column="1" Text="{ Binding DateOfReturn,  StringFormat=dd.MM.yyy}"></TextBlock>
+                        </Grid>
+                    </Border>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+
         <StackPanel Grid.Row="2" Orientation="Horizontal">
             <Button x:Name="AddBtn">Добавить</Button>
             <Button x:Name="EditBtn">Изменить</Button>
