--- a/Pages/ReaderMenuPage.xaml
+++ b/Pages/ReaderMenuPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Library.Pages.AdminMenuPage"
+﻿<Page x:Class="Library.Pages.ReaderMenuPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,14 +6,12 @@
       xmlns:local="clr-namespace:Library.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AdminMenuPage">
+      Title="ReaderMenuPage">
 
     <Grid>
         <StackPanel Background="#FFBA977B" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button x:Name="IssuanceAndReturnBookBtn" Click="IssuanceAndReturnBookBtn_Click">Выдача и возврат книг</Button>
             <Button x:Name="BookListBtn" Click="BookListBtn_Click">Книги в библиотеки</Button>
-            <Button x:Name="ReadersListBtn" Click="ReadersListBtn_Click">Читатели</Button>
+            <Button x:Name="BookIssuancetBtn" Click="BookIssuancetBtn_Click" >Взятые киниги</Button>
         </StackPanel>
     </Grid>
-   
 </Page>
