--- a/App.xaml
+++ b/App.xaml
@@ -13,14 +13,18 @@
             <Setter Property="Width" Value="200"></Setter>
             <Setter Property="Height" Value="35"></Setter>
         </Style>
+        <Style TargetType="Button">
+            <Setter Property="Margin" Value="3"></Setter>
+            <Setter Property="Height" Value="34"></Setter>
+            <Setter Property="Foreground" Value="Black"></Setter>
+            <!--<Setter Property="Background" Value="#0000A7"></Setter>-->
+        </Style>
         <Style TargetType="TextBlock">
             <Setter Property="Margin" Value="5"></Setter>
-            <Setter Property="FontSize" Value="13"></Setter>
-            <Setter Property="Foreground" Value="Black"></Setter>
-        </Style>
-        <Style TargetType="Button">
-            <Setter Property="Margin" Value="5"></Setter>
-            <Setter Property="Height" Value="35"></Setter>
+            <Setter Property="FontSize" Value="15"></Setter>
+            <!--<Setter Property="Foreground" Value="White"></Setter>-->
+            <!--<Setter Property="FontWeight" Value="Bold"></Setter>-->
+            <Setter Property="FontWeight" Value="Medium"></Setter>
         </Style>
         <Style TargetType="DataGrid">
             <Setter Property="FontSize" Value="14"></Setter>
