--- a/Pages/AuthorizationPage.xaml
+++ b/Pages/AuthorizationPage.xaml
@@ -9,7 +9,7 @@
       Title="AuthorizationPage" >
 
     <Grid>
-        <StackPanel Background="#FFBA977B" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <StackPanel Margin="2" HorizontalAlignment="Right" Orientation="Horizontal">
                 <TextBlock>Логин</TextBlock>
                 <TextBox x:Name="LoginTb" Panel.ZIndex="0"></TextBox>
