--- a/Pages/BookListPage.xaml
+++ b/Pages/BookListPage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="BookListPage">
 
-    <Grid Background="#FFBA977B" >
+    <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="12*"/>
             <RowDefinition Height="70*"/>
@@ -20,7 +20,7 @@
             <TextBlock>По жанру</TextBlock>
             <ComboBox x:Name="GenrehCb" SelectionChanged="GenrehCb_SelectionChanged" ></ComboBox>
         </StackPanel>
-        <ListView  Margin="5" Grid.Row="1" x:Name="BookList" d:ItemsSource="{d:SampleData ItemCount=5}" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+        <ListView  Margin="5"  Grid.Row="1" x:Name="BookList" d:ItemsSource="{d:SampleData ItemCount=5}" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Horizontal" />
@@ -29,7 +29,7 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Border BorderBrush="LightGray" BorderThickness="2" Margin="5" >
-                        <Grid Width="320" Height="200">
+                        <Grid Width="350" Height="200">
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
                                 <RowDefinition/>
