--- a/Pages/IssuanceAndReturnBookPage.xaml
+++ b/Pages/IssuanceAndReturnBookPage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="IssuanceAndReturnBookPage">
 
-    <Grid Background="#FFBA977B" >
+    <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="12*"/>
             <RowDefinition Height="70*"/>
@@ -30,7 +30,7 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Border BorderBrush="LightGray" BorderThickness="2" Margin="5">
-                        <Grid Width="330">
+                        <Grid Width="355">
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
                                 <RowDefinition/>
