aded new function

--- a/Pages/IssuanceAndReturnBookPage.xaml
+++ b/Pages/IssuanceAndReturnBookPage.xaml
@@ -69,9 +69,7 @@
 
 
         <StackPanel Grid.Row="2" Orientation="Horizontal">
-            <Button x:Name="AddBtn">Добавить</Button>
-            <Button x:Name="EditBtn">Изменить</Button>
-            <Button x:Name="DeleteBtn">Удалить</Button>
+            <Button x:Name="AddBtn" Click="AddBtn_Click">Добавить</Button>
         </StackPanel>
     </Grid>
 </Page>
