--- a/Pages/ExtendBookPage.xaml
+++ b/Pages/ExtendBookPage.xaml
@@ -21,8 +21,8 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition  Width="2*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition/>
 
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Row="0" Grid.Column="0">Книга:</TextBlock>
