--- a/App.xaml
+++ b/App.xaml
@@ -9,6 +9,11 @@
             <Setter Property="Padding" Value="8"></Setter>
             <Setter Property="Height" Value="35"></Setter>
         </Style>
+        <Style TargetType="PasswordBox">
+            <Setter Property="Width" Value="200"></Setter>
+            <Setter Property="Padding" Value="8"></Setter>
+            <Setter Property="Height" Value="35"></Setter>
+        </Style>
         <Style TargetType="ComboBox">
             <Setter Property="Width" Value="200"></Setter>
             <Setter Property="Height" Value="35"></Setter>
